# lifescience-bd-intelligence

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  get_started.md  pyproject.toml  setup.md  verify_setup.py
backend/: Dockerfile  __init__.py  config.py  graph.py  main.py  ptrs_table.json  state.py
backend/agents/: __init__.py  discovery_agent.py  indications_agent.py  market_agent.py  research_planner.py  science_agent.py  synthesizer.py
backend/tools/: __init__.py  clinicaltrials.py  langchain_tools.py  mcp_client.py
backend/utils/: __init__.py  buyer_context.py  deal_benchmarks.json  deal_benchmarks.py  ptrs_calculator.py  ptrs_lookup.py
docs/: agent_logic.md  architecture.md  presentation_ai_workshop.html  presentation_ai_workshop_light.html  presentation_user_demo.html  presentation_user_demo_light.html
docs/prompts/: 01_architecture_prompt.md  02_ui_prompt.md  03_validation_prompt.md
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: AssumptionsPanel.jsx  ChatWindow.jsx  DiscoveryCard.jsx  FilterSidebar.jsx  GuidedEntryForm.jsx  ReasoningTrace.jsx  ResultCard.jsx  ValuationWaterfall.jsx
tests/: QUICK_REFERENCE.md  README.md  __init__.py  run_deal_tests.py  test_real_deals.py
